--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -1,3 +1,8 @@
-h1 {
-  color: #333;
+@import "./setting.scss";
+
+.app {
+  background-color: $black;
+  color: $white;
+  height: 100%;
+  width: 100%;
 }
