Adding new components

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -2,3 +2,7 @@
 // Layout Style
 @import "./layout/header";
 @import "./layout/tab-nav";
+@import "./layout/panel";
+
+// Components Style
+//@import "./components/lists";
