--- a/src/assets/scss/_setting.scss
+++ b/src/assets/scss/_setting.scss
@@ -4,6 +4,7 @@
 $black: #000000;
 $white: #ffffff;
 $light-gray: #919496;
+$dark-gray: #424242;
 $green: #1db954;
 $light-green: #1ed760;
 
@@ -21,8 +22,4 @@ body {
   height: 100%;
   overflow: hidden;
   width: 100%;
-}
-
-.music-panel {
-  width: 80%;
 }
