--- a/src/assets/scss/layout/_tab-nav.scss
+++ b/src/assets/scss/layout/_tab-nav.scss
@@ -1,5 +1,5 @@
 .tab-nav {
-  background-color: rgba($white, 0.1);
+  //background-color: rgba($white, 0.1);
   height: 100%;
   min-width: 220px;
   padding-top: 50px;
