--- a/src/assets/scss/components/_lists.scss
+++ b/src/assets/scss/components/_lists.scss
@@ -7,5 +7,11 @@
 
 .list-item {
   flex: 0 0 25%;
-  padding: 10px 5px;
+  width: 25%;
+  &--wrapper {
+    padding: 10px;
+    img {
+      width: 100%;
+    }
+  }
 }
