--- a/src/assets/scss/layout/_tab-nav.scss
+++ b/src/assets/scss/layout/_tab-nav.scss
@@ -1,10 +1,11 @@
 .tab-nav {
   //background-color: rgba($white, 0.1);
   height: 100%;
+  left: 0;
   min-width: 220px;
   padding-top: 50px;
   //padding: 0.5rem;
-  //position: fixed;
+  position: fixed;
   width: 20%;
 }
 .tab-item {
